# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("blink") {
  sources = [
    "blink_event_util.cc",
    "blink_event_util.h",
    "input_handler_proxy.cc",
    "input_handler_proxy.h",
    "input_handler_proxy_client.h",
    "input_scroll_elasticity_controller.cc",
    "input_scroll_elasticity_controller.h",
    "synchronous_input_handler_proxy.h",
  ]

  deps = [
    "//cc:cc",
    "//third_party/WebKit/public:blink_headers",
    "//ui/events",
    "//ui/events:gesture_detection",
    "//ui/gfx/geometry",
  ]
}
